fix: updated Netflix app

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@tailwindcss/vite": "^4.0.14",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
